[gd_scene load_steps=28 format=3 uid="uid://da7bfbph1odmc"]

[ext_resource type="Script" path="res://Sceens/Combat/Combat.gd" id="1_wien3"]
[ext_resource type="Texture2D" uid="uid://cdh503df5bldu" path="res://Media/Hand_Place_Holder.png" id="2_t4oqd"]
[ext_resource type="Texture2D" uid="uid://sdsij0f5brft" path="res://Media/Rooms/combat_sceene.PNG" id="2_u60ik"]
[ext_resource type="Texture2D" uid="uid://c52dwimuh18ul" path="res://Media/fire_card_place_holder.png" id="3_nre6n"]
[ext_resource type="Texture2D" uid="uid://cogngh1x8fby8" path="res://Media/Cards/Untitled_Artwork-3.png" id="3_rtd6y"]
[ext_resource type="Texture2D" uid="uid://btjspb2kxbcsh" path="res://Media/lightning_card_place_holder.png" id="4_0r3as"]
[ext_resource type="Script" path="res://Sceens/Combat/Hand.gd" id="4_1baxm"]
[ext_resource type="Texture2D" uid="uid://fhlngnfj6gnm" path="res://Media/Cards/Untitled_Artwork-4.png" id="4_qn86r"]
[ext_resource type="Texture2D" uid="uid://3d8abjf0xw1m" path="res://Media/acid_card_place_holder.png" id="5_kc0jq"]
[ext_resource type="Texture2D" uid="uid://d1nincp8ncxhx" path="res://Media/Cards/Untitled_Artwork-5.png" id="5_o0biq"]
[ext_resource type="Texture2D" uid="uid://dryfsyqpgw71f" path="res://Media/deck_place_holder.png" id="6_ou3yg"]
[ext_resource type="Texture2D" uid="uid://djcrodb8an6g5" path="res://Media/Enemys/BlobCube.png" id="7_1qse1"]
[ext_resource type="Script" path="res://Sceens/Combat/Enemy.gd" id="9_66w4a"]
[ext_resource type="Texture2D" uid="uid://ciycr031ethmp" path="res://Media/Heart_Background.png" id="10_qwfnh"]
[ext_resource type="Texture2D" uid="uid://coekpet0npm4c" path="res://Media/Heart_Filled_Placeholder.png" id="11_02y54"]
[ext_resource type="Texture2D" uid="uid://b1a607o7cmcge" path="res://Media/you_died.png" id="12_gv2k7"]
[ext_resource type="Script" path="res://Sceens/Combat/Player.gd" id="12_o3ix8"]
[ext_resource type="AudioStream" uid="uid://crnar0eqamqbb" path="res://Media/Music/One Man Symphony - Downtempo & Lofi & Progressive Music Pack Vol1/One Man Symphony - Downtempo & Lofi & Progressive Music Pack Vol - 1 (Free) - 02 Lost Dream.mp3" id="14_nvehq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f51sh"]
size = Vector2(186.875, 318.731)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jttw"]
size = Vector2(17.7168, 18.8508)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04xbk"]
size = Vector2(34.8516, 43.0423)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vuvx"]
size = Vector2(323.577, 396.951)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orxyg"]
size = Vector2(143.409, 182.283)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvqv8"]
size = Vector2(327.986, 430.167)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frupc"]
size = Vector2(149.57, 230.755)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sy4h2"]
size = Vector2(22.9217, 472.552)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlcm0"]
size = Vector2(145.877, 143.051)

[node name="Combat" type="Node2D"]
script = ExtResource("1_wien3")

[node name="Room" type="Sprite2D" parent="."]
position = Vector2(960, 515)
scale = Vector2(0.466, 0.466)
texture = ExtResource("2_u60ik")

[node name="Hand" type="Sprite2D" parent="Room"]
position = Vector2(-8.58369, -72.9614)
script = ExtResource("4_1baxm")

[node name="CardOne" type="Sprite2D" parent="Room/Hand"]
position = Vector2(-293.991, 942.06)
rotation = -0.351371
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_rtd6y")

[node name="CardOneCollission" type="Area2D" parent="Room/Hand/CardOne"]
position = Vector2(-513.938, -387.145)
rotation = -0.00316888
scale = Vector2(12.1082, 8.90791)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Hand/CardOne/CardOneCollission"]
position = Vector2(44.8542, 41.8594)
rotation = 3.12295
scale = Vector2(0.809396, 1.03982)
shape = SubResource("RectangleShape2D_f51sh")

[node name="CardTwo" type="Sprite2D" parent="Room/Hand"]
position = Vector2(-90.1288, 931.331)
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_qn86r")

[node name="CardTwoCollission" type="Area2D" parent="Room/Hand/CardTwo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Hand/CardTwo/CardTwoCollission"]
position = Vector2(18.6602, 7.62939e-06)
scale = Vector2(108.816, 156.015)
shape = SubResource("RectangleShape2D_4jttw")

[node name="CardThree" type="Sprite2D" parent="Room/Hand"]
position = Vector2(120.172, 950.644)
rotation = 0.20524
scale = Vector2(0.125, 0.125)
texture = ExtResource("5_o0biq")

[node name="CardThreeCollission" type="Area2D" parent="Room/Hand/CardThree"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Hand/CardThree/CardThreeCollission"]
position = Vector2(14.0918, -26.3164)
scale = Vector2(52.7007, 71.4228)
shape = SubResource("RectangleShape2D_04xbk")

[node name="Enemy" type="Sprite2D" parent="Room"]
position = Vector2(-85.8369, 354.077)
scale = Vector2(0.356752, 0.416338)
texture = ExtResource("7_1qse1")
script = ExtResource("9_66w4a")

[node name="Player" type="Sprite2D" parent="Room"]
position = Vector2(-1560.09, -832.618)
texture = ExtResource("10_qwfnh")
script = ExtResource("12_o3ix8")

[node name="HeartOne" type="Sprite2D" parent="Room/Player"]
position = Vector2(-99, 0)
texture = ExtResource("11_02y54")

[node name="HeartTwo" type="Sprite2D" parent="Room/Player"]
position = Vector2(6, 0)
texture = ExtResource("11_02y54")

[node name="HeartThree" type="Sprite2D" parent="Room/Player"]
position = Vector2(100, 0)
texture = ExtResource("11_02y54")

[node name="DeathScreen" type="Sprite2D" parent="Room/Player"]
visible = false
position = Vector2(-250, -980)
texture = ExtResource("12_gv2k7")

[node name="DamageTimer" type="Timer" parent="Room/Player"]
wait_time = 5.0
one_shot = true

[node name="AudioListener2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_nvehq")
volume_db = -5.5
autoplay = true
parameters/looping = true

[node name="HandOld" type="Sprite2D" parent="."]
visible = false
position = Vector2(949, 982)
rotation = -0.0233868
scale = Vector2(0.466, 0.466)
texture = ExtResource("2_t4oqd")

[node name="CardOne" type="Sprite2D" parent="HandOld"]
position = Vector2(-131.455, 17.9308)
rotation = -0.392048
texture = ExtResource("3_nre6n")

[node name="CardOneTopCollission" type="Area2D" parent="HandOld/CardOne"]
position = Vector2(0.942413, 10.2524)
scale = Vector2(0.659062, 1.02441)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandOld/CardOne/CardOneTopCollission"]
position = Vector2(1.69519, -31.4579)
rotation = 3.12295
scale = Vector2(0.809396, 1.03982)
shape = SubResource("RectangleShape2D_f51sh")

[node name="CardOneBottomCollission" type="Area2D" parent="HandOld/CardOne"]
position = Vector2(-34.5733, 90.7672)
rotation = 0.198251
scale = Vector2(0.356062, 0.583398)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandOld/CardOne/CardOneBottomCollission"]
position = Vector2(31.5605, -174.793)
rotation = 2.87026
scale = Vector2(0.777533, 1.02113)
shape = SubResource("RectangleShape2D_4vuvx")

[node name="CardTwo" type="Sprite2D" parent="HandOld"]
position = Vector2(-63.4036, 16.5218)
rotation = -0.0113552
texture = ExtResource("4_0r3as")

[node name="CardTwoTopCollision" type="Area2D" parent="HandOld/CardTwo"]
position = Vector2(5.06639, -1.82503)
rotation = -0.0498661
scale = Vector2(0.752387, 0.974312)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandOld/CardTwo/CardTwoTopCollision"]
position = Vector2(-6.33594, -26.4097)
rotation = -3.07101
scale = Vector2(0.809396, 1.03982)
shape = SubResource("RectangleShape2D_orxyg")

[node name="CardTwoBottomCollision" type="Area2D" parent="HandOld/CardTwo"]
position = Vector2(-36.0021, 85.8013)
rotation = 0.243874
scale = Vector2(0.356062, 0.583398)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandOld/CardTwo/CardTwoBottomCollision"]
position = Vector2(10.296, -152.029)
rotation = 2.9229
scale = Vector2(0.809396, 1.03982)
shape = SubResource("RectangleShape2D_mvqv8")

[node name="CardThree" type="Sprite2D" parent="HandOld"]
position = Vector2(3.15704, 36.0837)
rotation = 0.317852
texture = ExtResource("5_kc0jq")

[node name="CardThreeTopCollision" type="Area2D" parent="HandOld/CardThree"]
position = Vector2(-4.54942, 16.0094)
rotation = 0.108521
scale = Vector2(0.757223, 1.02591)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandOld/CardThree/CardThreeTopCollision"]
position = Vector2(6.09619, -15.6172)
rotation = 3.0367
scale = Vector2(0.809396, 1.03982)
shape = SubResource("RectangleShape2D_frupc")

[node name="CardThreeBottomCollision" type="Area2D" parent="HandOld/CardThree"]
position = Vector2(-4.67461, 101.736)
rotation = 0.108521
scale = Vector2(0.847618, 0.498093)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandOld/CardThree/CardThreeBottomCollision"]
position = Vector2(-8.32422, -203.297)
rotation = 3.07492
scale = Vector2(5.02425, 1.03982)
shape = SubResource("RectangleShape2D_sy4h2")

[node name="Deck" type="Sprite2D" parent="HandOld"]
position = Vector2(156.77, 11.6692)
rotation = 0.0477174
texture = ExtResource("6_ou3yg")

[node name="DeckCollision" type="Area2D" parent="HandOld/Deck"]
position = Vector2(-0.323153, 110.04)
rotation = 0.010067
scale = Vector2(0.847618, 1.65458)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandOld/Deck/DeckCollision"]
position = Vector2(0.0693359, -66.5276)
rotation = 3.12295
scale = Vector2(0.809396, 1.03982)
shape = SubResource("RectangleShape2D_mlcm0")

[connection signal="input_event" from="Room/Hand/CardOne/CardOneCollission" to="Room/Hand" method="_on_card_one_collission_input_event"]
[connection signal="mouse_entered" from="Room/Hand/CardOne/CardOneCollission" to="Room/Hand" method="_on_card_one_collission_mouse_entered"]
[connection signal="mouse_exited" from="Room/Hand/CardOne/CardOneCollission" to="Room/Hand" method="_on_card_one_collission_mouse_exited"]
[connection signal="input_event" from="Room/Hand/CardTwo/CardTwoCollission" to="Room/Hand" method="_on_card_two_collission_input_event"]
[connection signal="mouse_entered" from="Room/Hand/CardTwo/CardTwoCollission" to="Room/Hand" method="_on_card_two_collission_mouse_entered"]
[connection signal="mouse_exited" from="Room/Hand/CardTwo/CardTwoCollission" to="Room/Hand" method="_on_card_two_collission_mouse_exited"]
[connection signal="input_event" from="Room/Hand/CardThree/CardThreeCollission" to="Room/Hand" method="_on_card_three_collission_input_event"]
[connection signal="mouse_entered" from="Room/Hand/CardThree/CardThreeCollission" to="Room/Hand" method="_on_card_three_collission_mouse_entered"]
[connection signal="mouse_exited" from="Room/Hand/CardThree/CardThreeCollission" to="Room/Hand" method="_on_card_three_collission_mouse_exited"]
[connection signal="input_event" from="HandOld/CardOne/CardOneTopCollission" to="HandOld" method="_on_card_one_top_collission_input_event"]
[connection signal="mouse_entered" from="HandOld/CardOne/CardOneBottomCollission" to="HandOld" method="_on_card_one_bottom_collission_mouse_entered"]
[connection signal="mouse_exited" from="HandOld/CardOne/CardOneBottomCollission" to="HandOld" method="_on_card_one_bottom_collission_mouse_exited"]
[connection signal="input_event" from="HandOld/CardTwo/CardTwoTopCollision" to="HandOld" method="_on_card_two_top_collision_input_event"]
[connection signal="mouse_entered" from="HandOld/CardTwo/CardTwoBottomCollision" to="HandOld" method="_on_card_two_bottom_collision_mouse_entered"]
[connection signal="mouse_exited" from="HandOld/CardTwo/CardTwoBottomCollision" to="HandOld" method="_on_card_two_bottom_collision_mouse_exited"]
[connection signal="input_event" from="HandOld/CardThree/CardThreeTopCollision" to="HandOld" method="_on_card_three_top_collision_input_event"]
[connection signal="mouse_entered" from="HandOld/CardThree/CardThreeBottomCollision" to="HandOld" method="_on_card_three_bottom_collision_mouse_entered"]
[connection signal="mouse_exited" from="HandOld/CardThree/CardThreeBottomCollision" to="HandOld" method="_on_card_three_bottom_collision_mouse_exited"]
[connection signal="input_event" from="HandOld/Deck/DeckCollision" to="HandOld" method="_on_deck_collision_input_event"]
[connection signal="mouse_entered" from="HandOld/Deck/DeckCollision" to="HandOld" method="_on_deck_collision_mouse_entered"]
[connection signal="mouse_exited" from="HandOld/Deck/DeckCollision" to="HandOld" method="_on_deck_collision_mouse_exited"]
